# CoLiLo_bundle

./: .gitignore
Calibrate_moments_py/: Pmatrices.csv  Pmatrices_9.csv  Pmatrices_iid_9.csv  Run_mixture.py  Xmatrices_9.csv  Xmatrices_iid_9.csv  calculate_moments.py  calib_results.csv  calib_results.tex  calib_results_iid.csv  dGrowth.csv  discreteApproximation.py  discreteGMAR.py  match_moments.py  output.csv  residuals.csv  skewness.csv
Calibrate_moments_py/Old_codes/: AlternativeDiscreteGMAR4Comp.py  Old_match_moms.py  Test_vs_Matlab.py  discreteARGM.py  discreteGMAR_auto.py  test_discret.py
Calibrate_moments_py_Gaussian/: PiMx.csv  Pmatrices_25.csv  Pmatrices_3.csv  Pmatrices_5.csv  Pmatrices_9.csv  Pmatrices_iid_5.csv  Pmatrices_iid_9.csv  README.md  Run_mixture.py  Run_mixture_iid.py  Run_mixture_iid_OLD.py  XMx.csv  Xmatrices.csv  Xmatrices_25.csv  Xmatrices_3.csv  Xmatrices_5.csv  Xmatrices_9.csv  Xmatrices_iid_5.csv  Xmatrices_iid_9.csv  calculate_moments.py  calib_results.csv  calib_results.tex  calib_results_iid.tex  discreteApproximation.py  discreteGMAR.py  gaussian_mixture_quadrature.py  kurtosis.csv  match_moments.py  mixed_gaussian_params.csv  residuals.csv  variance.csv
Calibrate_moments_py_Gaussian/.ipynb_checkpoints/: Run_mixture-checkpoint.py
Calibrate_moments_py_Gaussian/Old_codes/: discrete_Hyperbolic.py  example_ARGM.py
CoLiLo_CRRA_2c_step3_AR1_EZ_3states/: .fortls  CMakeLists_gfortran.txt  CMakeLists_intel.txt  Makefile_test  check_memory.sh  find_unused_globals.sh  fpm.toml  run_all.sh  run_this.f90  run_this.out
CoLiLo_CRRA_2c_step3_AR1_EZ_3states/csvfiles_D/: coef_s1_data_v_DEU.csv  coef_s1_data_v_MEX.csv  coef_v1_data_v_DEU.csv  coef_v1_data_v_MEX.csv  coef_v2_data_v_DEU.csv  coef_v2_data_v_MEX.csv  kappa_data_v.csv  pB_aut_data_v_DEU.csv  pB_aut_data_v_MEX.csv  pB_data_v_DEU.csv  pB_data_v_MEX.csv  s1_data_v_DEU.csv  s1_data_v_MEX.csv  v1_aut_data_v_DEU.csv  v1_aut_data_v_MEX.csv  v1_data_v_DEU.csv  v1_data_v_MEX.csv  v2_aut_data_v_DEU.csv  v2_aut_data_v_MEX.csv  v2_data_v_DEU.csv  v2_data_v_MEX.csv
CoLiLo_CRRA_2c_step3_AR1_EZ_3states/src/: .main.f90.swp  .main.f90.swp~  F_kappa.f90  F_kappa.f90~  MarkovMoments_mod.f90  add_my_kinds_in_my_toolbox.sh  add_wp.sh  bisection_kappa.f90  bisection_price_autarky.f90  consumption1_autarky_module.f90  consumption1_autarky_module.f90~  core_model.f90  core_model_autarky.f90  default.profdata  diagnostics.html  discretize.f90  discretize.f90~  discretize.f90~~  find_kappa_mod.f90  find_kappa_mod2.f90  find_zero_bisection_mod.f90  find_zero_bisection_mod.f90~  fort.4777713  globals.f90  globals.f90~  globals.f90~~  globals_old.f90  initialize_and_save_mod_CRRA_2c.f90  initialize_and_save_mod_CRRA_2c_withglobs.f90  interp_mod.f90  linespaced_mod.f90  main.f90  main.f90~  my_I_O.f90  my_bspline4_mod.f90  my_kinds_mod.f90  my_toolbox.f90  my_toolbox.f90.bak  my_toolbox.f90~  myfunc_FPI.f90  (+22 more)
CoLiLo_CRRA_2c_step3_AR1_EZ_3states/test_autarky/: CMakeLists.txt  run_me.sh
CoLiLo_CRRA_2c_step3_AR1_EZ_3states/test_autarky/csvfiles_D/: kappa_data_v.csv  pB_aut_data_v_DEU.csv  pB_aut_data_v_MEX.csv  v1_aut_data_v_DEU.csv  v1_aut_data_v_MEX.csv  v2_aut_data_v_DEU.csv  v2_aut_data_v_MEX.csv
CoLiLo_CRRA_2c_step3_AR1_EZ_3states/test_autarky/src/: globals.f90  main.f90  value_autarky.f90  value_autarky_wrong_stride.f90
Rcode/: ConsumptionImportShares.csv  ar_data.csv  ar_data_ADHOC.csv  ar_data_pwt.csv  data_calibration.csv  data_calibration_meta.csv  quick_stylized_facts_PWT_only.r  report.html  stan_code.stan.old
modules/: Makefile_pdf  MarkovMoments_mod.f90  ansi_colors_mod.f90  ansi_colors_mod.i90  asset_prices.f90  asset_prices.i90  asset_prices_aut.f90  asset_prices_aut.i90  csv_kinds.mod  csv_parameters.mod  discretize.i90  find_zero_bisection_mod.f90  initialize_and_save_mod.f90  initialize_and_save_mod.i90  initialize_and_save_mod_CRRA.f90.OLD  initialize_and_save_mod_CRRA.i90  initialize_and_save_mod_CRRA_2c.f90  initialize_and_save_mod_CRRA_2c.i90  initialize_and_save_mod_CRRA_2c_AllvAll.f90  initialize_and_save_mod_CRRA_2c_AllvAll.i90  initialize_and_save_mod_CRRA_3c.f90  initialize_and_save_mod_CRRA_3c.f90.old  initialize_and_save_mod_CRRA_3c.i90  initialize_and_save_mod_CRRA_3c_NoWelf.f90  initialize_and_save_mod_EZ_k.f90  initialize_and_save_mod_EZ_k.i90  linespaced_mod.i90  main_newton.f90  main_newton.i90  main_pdf.f90  main_pdf.i90  my_I_O.i90  my_kinds_mod.f90  my_kinds_mod.i90  my_kinds_mod.mod  my_spline_mod.f90  mybroyden.f90  mybroyden.i90  mymoments.i90  optimization_interface.i90  (+19 more)
modules/OGPF/: ogpf.f90  ogpf.i90
modules/SaveCoeffsOneTime/: Makefile  csv_kinds.mod  csv_module.mod  csv_parameters.mod  csv_utilities.mod  discretize.mod  globals.mod  linespaced_mod.mod  my_i_o.mod  my_kinds_mod.mod  (+5 more)
(+3508 files in other folders)
